Swithc getUpdate to POST to be able to send allowed_updates as json array
